...
  "balance_categories_gift": "Gift",
  "balance_categories_sideJob": "Side job",
  "settings_language": "Language",
  "settings_selectCurrency": "Select currency",
  "settings_appearance": "Appearance",
  "settings_theme": "Theme",
  "settings_themeBlue": "Blue",
  "settings_themePurple": "Purple",
  "settings_themeGreen": "Green",
  "settings_explanationMode": "Explanation mode",
  "settings_howToExplain": "How to explain",
  "settings_uxSimple": "Simple",
  "settings_uxPro": "Pro",
  "settings_uxSimpleDescription": "Simple explanations",
...
